tests/NormalTests/paczka1/fuzzy1/93187403.err
Error in line 4: A680 S126 669,8
Error in line 6: A680 A729 67,2
Error in line 1: Erl A729 85,6
Error in line 25: Erl A680 59,5
Error in line 28: 0tRiPv A680 27,6
Error in line 35: jt4j1mEvDbX A832 98,55
Error in line 22: k88OJu S126 53,4
